# rpg-framework

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
battle/: Encounter.cpp  Encounter.hpp
entities/: enemy.hpp  entity.cpp  party.hpp
globals/: gmath.hpp
graphics/: AnimationManager.cpp  AnimationManager.hpp  background.cpp  background.hpp  sprite.cpp  sprite.hpp
main/: game.cpp  game.hpp  main.cpp  slime.cpp  slime.hpp
test-assets/enemy/: slime.aseprite  slime.ini
test-assets/player/: player.aseprite  player.ini
ui/: button.cpp  button.hpp
world/: world.cpp  world.hpp
